--- a/.gitignore
+++ b/.gitignore
@@ -135,14 +135,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .envrc
 .venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -205,3 +199,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+node_modules/*
