--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
