--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
 
       - name: Lint with Flake8
         run: |
-          # Stop build if syntax errors occur
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # Warning for styling issues
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Check Formatting with Black
@@ -50,7 +48,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20' # <--- UPDATED TO 20
           cache: 'npm'
           cache-dependency-path: './pdf-merger-frontend/package.json'
 
